--- a/Firefly/.vscode/settings.json
+++ b/Firefly/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "/home/bee/Applications/Godot_v4.2.1-stable_linux.x86_64"
+    "godotTools.editorPath.godot4": "/Applications/Godot.app"
 }
