--- a/Firefly/Assets/UI/settings_layout.json
+++ b/Firefly/Assets/UI/settings_layout.json
@@ -63,7 +63,7 @@
 				"step": 0.5
 		 	},
 			"Music": {
-				"label": "Music Vol.",
+				"label": "Music",
 				"description": "Control the Volume of the Music",
 				"type": "slider",
 				"config_key": "music",
@@ -72,7 +72,7 @@
 				"step": 0.5
 		 	},
 			"SFX": {
-				"label": "SFX Vol.",
+				"label": "SFX",
 				"description": "Control the Volume of the SFX",
 				"type": "slider",
 				"config_key": "sfx",
@@ -81,7 +81,7 @@
 				"step": 0.5
 		 	},
 			"Ambience": {
-				"label": "Ambience Vol.",
+				"label": "Ambience",
 				"description": "Control the Volume of the Ambience",
 				"type": "slider",
 				"config_key": "ambience",
