--- a/Firefly/Assets/UI/settings_layout.json
+++ b/Firefly/Assets/UI/settings_layout.json
@@ -39,7 +39,7 @@
 				 "description": "Select your resolution",
 				 "type": "choice",
 				 "config_key": "resolution",
-				 "options": ["1x", "2x", "3x", "4x", "5x", "6x"]
+				 "options": ["1x", "2x", "3x", "4x", "5x", "6x", "7x", "8x", "9x "]
 			},
 			"vsync": {
 				"label": "V-Sync Enabled",
