--- a/Firefly/Assets/UI/settings_layout.json
+++ b/Firefly/Assets/UI/settings_layout.json
@@ -107,7 +107,7 @@
 				"label": "Input Helpers",
 				"description": "Assist with some inputs, such as upward wallhop climbs.",
 				"type": "boolean",
-				"config_key": "input_assist",
+				"config_key": "input_assists",
 			},
 			"slide_assist": {
 				"label": "Slide Boost Helper",
