Dampen Wall Jump Velocity Momentum + Put purple in the cave

--- a/Firefly/Assets/DialogueData/Purple/teaser.json
+++ b/Firefly/Assets/DialogueData/Purple/teaser.json
@@ -5,11 +5,15 @@
 	
 	"[font_size=96]Finding [color=yellow]your family[/color] without your wings is [font_size=128]NOT[/font_size] going to be easy.[/font_size]",
 	
-	"[font_size=96]You'll need every [color=yellow]trick[/color] in the book[/font_size]",
+	"[font_size=128]Buttttttttttttttt, I'll help you[/font_size]",
+	
+	"[font_size=96]They're called [color=#36c5f4]Glow Worms[/color]. They're kinda like you actually with the [color=#36c5f4]glowing[/color] and all.[/font_size]",
+	
+	"[font_size=128]You're gonna need every [color=yellow]trick[/color] in the book[/font_size]",
 	
 	"[font_size=128]and then some...[/font_size]",
 	
-	"[font_size=128]So [color=red]Good Luck[/color], you're gonna need it.[/font_size]"
+	"[font_size=128][color=red]Good Luck[/color], you're gonna need it.[/font_size]"
   ],
   "sequential_dialogue": "",
   "victory_dialogue": false
