--- a/Firefly/Assets/DialogueData/Purple/teaser.json
+++ b/Firefly/Assets/DialogueData/Purple/teaser.json
@@ -1,9 +1,9 @@
 {
   "identifier": "teaser",
   "dialogue": [
-	"[font_size=128]Hi! My name is [color=red]Violet![/color][/font_size]",
+	"[font_size=160]Hi! My name is [color=red]Violet![/color][/font_size]",
 	
-	"[font_size=96]Finding [color=yellow]your family[/color] without your wings is [font_size=128]NOT[/font_size] going to be easy.[/font_size]",
+	"[font_size=96]Finding [color=yellow]your family[/color] with broken wings is [font_size=128]NOT[/font_size] going to be easy.[/font_size]",
 	
 	"[font_size=128]Buttttttttttttttt, I'll help you[/font_size]",
 	
