experimenting with font size

--- a/Firefly/Assets/DialogueData/Purple/teaser.json
+++ b/Firefly/Assets/DialogueData/Purple/teaser.json
@@ -1,7 +1,7 @@
 {
   "identifier": "teaser",
   "dialogue": [
-	"[font_size=160]Hi! My name is [color=red]Violet![/color][/font_size]",
+	"[font_size=96][font_size=128]Hello![/font_size] My name is [font_size=160][color=red]Violet![/color][/font_size][/font_size]",
 	
 	"[font_size=96]Finding [color=yellow]your family[/color] with broken wings is [font_size=128]NOT[/font_size] going to be easy.[/font_size]",
 	
