Add SpeedTest scenes and improve guardian unlock logic
Introduces new SpeedTest-related scenes and scripts. Updates GG guardian logic to auto-unlock passage when requirements are met, even without dialogue, and ensures connected gates, colliders, and animations update immediately if passage is already granted. Adds a 'Skip Jar Reveal' option to settings, updates dialogue and sign text, and makes minor level and lighting adjustments.

--- a/Firefly/Assets/UI/settings_layout.json
+++ b/Firefly/Assets/UI/settings_layout.json
@@ -21,6 +21,12 @@
 				"description": "Show speed run timer while playing",
 				"type": "boolean",
 				"config_key": "show_timer"
+			},
+			"skip_jar_reveal": {
+				"label": "Skip Jar Reveal",
+				"description": "Skips the jar reveal cinematic when unlocking hidden jars.",
+				"type": "boolean",
+				"config_key": "skip_jar_reveal"
 			}
 		}
 	},
@@ -49,7 +55,7 @@
 			},
 			"framerate": {
 				"label": "FPS Limit",
-				"description": "Se the max Frameratee",
+				"description": "Set the max Frameratee",
 				"type": "choice",
 				"config_key": "fps_target",
 				"options": ["30", "60", "90", "120", "144", "165", "240", "NONE"]
